--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: "Cherry Cream Soda";
+    background-color: rgb(14, 62, 66);
 }
 
 body #footer{
@@ -55,7 +56,7 @@ body #footer{
 }
 
 .reviews{
-    background-image:url("https://wallpaperscraft.com/image/forest_trees_grass_morning_light_87688_1920x1080.jpg");
+   
 }
 
 .reviews .container{
@@ -103,7 +104,14 @@ body #footer{
 
 .show{
     text-align: center;
+    color: white;
 }
+
+.show #comment{
+    padding-bottom: 3%;
+    color: black;
+}
+
 
 #showImage{ 
     margin: auto;  
@@ -113,10 +121,54 @@ body #footer{
     margin-bottom: 3%; 
 }
 
-.edit form{
+.editForm{
     margin-top: 3%; 
 }
 
+.editForm form{
+    margin-bottom: 4%;    
+}
+
+
+.editForm h1{
+    color: white ; 
+}
+
+.newReviewForm{
+    text-align: center; 
+}
+
+.newReviewForm h1{
+    color: white;
+    text-align: center; 
+}
+
+.newComment{
+    text-align: center; 
+}
+
+.newComment h1{
+    color: white;
+    text-align: center; 
+}
+
+.logInForm{
+    text-align: center; 
+}
+
+.logInForm h1{
+    color: white;
+    text-align: center; 
+}
+
+.registerForm{
+    text-align: center; 
+}
+
+.registerForm h1{
+    color: white;
+    text-align: center; 
+}
 
 .thumbnail img{
     width: 100%; 
