--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -2,24 +2,22 @@
 
 <% include ../partials/header %>
 
-
-<div class="container">
-    <div class="row">
-        <h1 style="text-align:center;">Add New Comment To <%= review.park %></h1>
-        <div style="width:30%; margin:25px auto;">
-            
-        <form action="/reviews/<%= review._id %>/comments" method="POST"> <!--want to pass in the id for the review-->
-            <div class="form-group">
-                <input class="form-control" type="text" name="comment[text]" placeholder="text">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="comment[author]" placeholder="author"> <!--using the square brackets allows for the data to be pulled together in req.body.park -->
-            </div>
-            
-            <button class="btn btn-large btn-primary btn-block">Submit</button>
-        </form>
-        <a href="/reviews">go back</a>
-    </div> 
+<div class="newComment">
+    <div class="container">
+        <div class="row">
+            <h1 style="text-align:center;">Add New Comment To <%= review.park %></h1>
+            <div style="width:30%; margin:25px auto;">
+                
+            <form action="/reviews/<%= review._id %>/comments" method="POST"> <!--want to pass in the id for the review-->
+                <div class="form-group">
+                    <input class="form-control" type="text" name="comment[text]" placeholder="text">
+                </div>
+                
+                <button class="btn btn-large btn-primary btn-block">Submit</button>
+            </form>
+            <a href="/reviews">go back</a>
+        </div> 
+    </div>
 </div>
 
 <% include ../partials/footer %>
