--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 
-<div class="edit">
+<div class="editForm">
     <div class="container">
         <div class="row">
             <h1 style="text-align:center;">Edit Park</h1>
