--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -14,8 +14,9 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="thumbnail">
                         <img src="<%= review.image %>">
-                            <div class="caption text-center">
+                            <div class="caption">
                                 <%= review.park %>
+                                <h6><em>Review By: <%= review.author.username %></em></h6>
                             </div>
                             <p>
                                 <a href="/reviews/<%=review._id%>" class="btn btn-primary">More Info</a>
