added the register link to the log in page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,8 @@
                 <input type="password" name="password" placeholder="password"> 
                 <button class="btn btn-large btn-primary">Log In!</button>
             </form>
-            <a href="/reviews">go back</a>
+            <p><a href="/register">No Account? Sign Up here!</a></p>
+            <p><a href="/reviews">...or go back</a></p>
         </div> 
     </div>
 </div>
