--- a/views/reviews/show.ejs
+++ b/views/reviews/show.ejs
@@ -14,7 +14,7 @@
             
             <div>
                 <h1>Adventure Review From: <%= review.author.username %></h1>
-                <p><%= review.description %></p>
+                <p id="review"><%= review.description %></p>
             </div>
             
             <div class="well">
