--- a/views/reviews/reviews.ejs
+++ b/views/reviews/reviews.ejs
@@ -12,7 +12,7 @@
         <div class="container">
             <% reviews.forEach(function(review){ %>
                 <div class="col-lg-3 col-md-6">
-                    <div class="thumbnail">
+                    <div class="thumbnail text-center">
                         <img src="<%= review.image %>">
                             <div class="caption">
                                 <%= review.park %>
