added a new background and fixed the grammar error

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
                             <h3>Look before you leap with our stellar national park reviews</h3> 
                             <hr>
                             <h3>Revise Your Trip Now!</h3>
-                            <a href="/reviews" class="btn btn-primary">Brows Reviews</a>
+                            <a href="/reviews" class="btn btn-primary">Browse Reviews</a>
                         </div>
                 </div>
             </div> 
