--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,9 @@ body{
 
 
 .home{
-     background: url("https://wallpaperscraft.com/image/forest_trees_twilight_110558_1920x1080.jpg");
+     background: url("http://www.socwall.com/images/wallpapers/48117-1920x1200.jpg");
+     background-position: top;
+     background-repeat: no-repeat; 
 }
 
 #homeTextBlock{
