--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: "Cherry Cream Soda";
     background-color: rgb(14, 62, 66);
-    padding-bottom: 10%; 
 }
 
 
@@ -183,3 +182,30 @@ body{
 .navbar.navbar-default{
     z-index: 10;  
 }
+
+
+/*sticky footer stuff=================================*/
+* {
+  margin: 0;
+}
+html, body {
+  height: 100%;
+}
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -50px; 
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.site-footer, .page-wrap:after {
+  height: 50px; 
+}
+.site-footer {
+  background: rgb(248, 248, 248);
+  text-align: center; 
+}
+
+/*sticky footer stuff=================================*/
