--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,5 +43,12 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+<!--stick footer start-->
+<div class="page-wrap">
+  
+  
+
         
         
