--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,12 +1,12 @@
+
 <% include ../partials/header %>
 
-
-<div class="editForm">
+<div class="newReviewForm">
     <div class="container">
         <div class="row">
-            <h1 style="text-align:center;">Edit Park</h1>
+            <h1 style="text-align:center;">Edit <%= park.park %></h1>
             <div style="width:30%; margin:25px auto;">
-            <form action="/reviews/<%= park._id %>?_method=PUT" method="POST"> <!--override function in able to RESTfully route-->
+            <form action="/reviews/<%= park._id %>?_method=PUT" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="park[park]" value="<%= park.park %>">
                 </div>
@@ -14,23 +14,25 @@
                     <input class="form-control" type="text" name="park[image]" value="<%= park.image %>">
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" name="park[description]"><%= park.description %></textarea>
+                    <input class="form-control" type="text" name="park[description]" value="<%= park.description %>">
                 </div>
                 
                 <button class="btn btn-large btn-primary btn-block">Submit</button>
             </form>
             
-            <!--delete button-->
-            <form  id="delete" action="/reviews/<%= park._id %>?_method=DELETE" method="POST"> <!--method override sees the method and uses delete instead of post  AND FORMS ARE NOT IN LINE ELEMENTS--> 
-                    <div class="form-group">
-                        <button class="btn btn-large btn-danger btn-block form-control">Delete</button> <!--submits the delete method-->
-                    </div>
+            <form id="delete" action="/reviews/<%= park._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-block btn-large btn-danger">Delete</button>
             </form>
             
-                <a href="/reviews">go back</a>
+            
+            <a href="/reviews">go back</a>
+            
             </div> 
         </div>
     </div>
 </div>
 
 <% include ../partials/footer %>
+
+
+
