changed words on the about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,13 +11,13 @@
         <div class="aboutContent">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1>Wait, What Am I Doing Here Again?</h1>
+                    <h1>Upload and edit your own reviews!</h1>
                     <p>
                         Loaded to the gunwalls black jack mizzenmast coffer take a caulk cog red ensign spirits trysail cutlass. American Main topmast pressgang maroon grog jolly boat execution dock bilge nipper Brethren of the Coast. Heave to gabion pressgang yawl hornswaggle grog salmagundi brig draft Privateer.    
                     </p>
                 </div>
                 <div class="col-lg-6" id="moveDown">
-                    <h1>Sit Back And Relax!</h1>
+                    <h1>Comment on other adventure reviews!</h1>
                     <p>
                         Parley hands walk the plank grapple Plate Fleet yard nipper main sheet warp league. Pirate Round Jolly Roger wench nipper draft Davy Jones' Locker list run a rig hornswaggle take a caulk. Bilge rat stern jury mast long clothes flogging spanker keelhaul Letter of Marque brig square-rigged.
     Brethren of the Coast strike colors gangplank mizzenmast walk the plank barkadeer salmagundi mutiny American Main wench. Swab transom ballast gun bucko bring a spring upon her cable crow's nest case shot execution dock quarterdeck. Shiver me timbers hands starboard yard marooned tackle league jack to go on account black jack.
@@ -26,7 +26,7 @@
             </div> 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>The Gift That Keeps On Giving...</h1>
+                    <h1>Sign up and become a fellow adventurer...</h1>
                     <p>
                         Parley hands walk the plank grapple Plate Fleet yard nipper main sheet warp league. Pirate Round Jolly Roger wench nipper draft Davy Jones' Locker list run a rig hornswaggle take a caulk. Bilge rat stern jury mast long clothes flogging spanker keelhaul Letter of Marque brig square-rigged.
     Brethren of the Coast strike colors gangplank mizzenmast walk the plank barkadeer salmagundi mutiny American Main wench. Swab transom ballast gun bucko bring a spring upon her cable crow's nest case shot execution dock quarterdeck. Shiver me timbers hands starboard yard marooned tackle league jack to go on account black jack.
